# Formal_languages_2022

./: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp  main.sh
src/: CMakeLists.txt  Earley.cpp  Earley.hpp  Grammar.cpp  Grammar.hpp  Situation.cpp  Situation.hpp  ksuffix.cpp  ksuffix.hpp
test/: CMakeLists.txt  earley-test.cpp  grammar-test.cpp  ksuffix-test.cpp  main.cpp  situation-test.cpp
test/lib/gtest-1.11.0/: CMakeLists.txt
